# collector-service/docs/swagger.json
@@ -195,6 +195,52 @@
                 }
             }
         },
+        "/collections/{name}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Получить коллекцию по имени",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Collections"
+                ],
+                "summary": "Get collection by name",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Collection name",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/collections.Collection"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/collections.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/collections.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "description": "Логин по Telegram ID, возвращает JWT",
@@ -423,6 +469,10 @@
                 "message": {
                     "type": "string",
                     "example": "unauthorized"
+                },
+                "status": {
+                    "description": "Optional, can be used to indicate HTTP status code",
+                    "type": "integer"
                 }
             }
         },
